# ptsminer

./: CMakeLists.txt  INSTALL-Debian.md  INSTALL-Ubuntu.md  README.md
src/: cpuid.c  cpuid.h  main_poolminer.cpp  main_poolminer.hpp  makefile.linux-mingw  makefile.mingw  makefile.mingw64  makefile.osx  makefile.unix  makefile.unix.no-chrono  md_helper.c  sha512.c  sha512.h  sph_sha2.c  sph_sha2big.c
src/intel/: sha512_avx.asm  sha512_sse4.asm
